# pytest-pyodide

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  README.md  action.yaml  conftest.py  pyproject.toml  setup.cfg
.github/: codecov.yml
.github/workflows/: build.yaml  build.yml  build_matrix.py  deploy.yml  filtermatrix.py  lint.yml  main.yaml  main.yml  pytest_in_pyodide.py  test_matrix.json  testall.yaml
.github/workflows/composite/: install-browers.yaml
.github/workflows/composite/install-browsers/: action.yaml
examples/: test_install_package.py
examples/wheels/: snowballstemmer-2.2.0-py2.py3-none-any.whl
pyodide_test_runner/: browser.py  decorator.py  hypothesis.py
pyodide_test_runner/tests/: test_decorator.py
pytest_pyodide/: __init__.py  _decorator_in_pyodide.py  browser.py  config.py  constants.py  copy_files_to_pyodide.py  decorator.py  doctest.py  fixture.py  hook.py  hypothesis.py  node_test_driver.js  pyodide.py  pytest_in_pyodide.py  run_tests_inside_pyodide.py  runner.py  server.py  utils.py
pytest_pyodide/_templates/: module_test.html  module_webworker_dev.js  module_webworker_runner.js  webworker_dev.js
tests/: in_pyodide_tests.py  test_ci.py  test_config.py  test_copy_files.py  test_decorator.py  test_doctest.py  test_fixture.py  test_js.py  test_load_package.py  test_marker.py  test_options.py  test_pytest_in_pyodide.py  test_run_in_pyodide.py  test_run_in_pyodide_coverage.py  test_selenium_worker.py  test_server.py  test_spawn_web_server.py  test_testing.py  test_webworker.py
tests/coverage-test/: pyproject.toml
tests/coverage-test/dummy_pkg/: __init__.py
tests/datafiles/: in_pyodide_tests.py  pyodide_http-0.2.0-py3-none-any.whl
tomtests/: test_handle_bug.py
tools/: install_chromedriver.sh
utils/: build_test_matrix.py
