[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

# Evable versioning via setuptools_scm
[tool.setuptools_scm]

[tool.mypy]
python_version = "3.10"
show_error_codes = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

# Strict checks
warn_unused_configs = true
check_untyped_defs = true
disallow_subclassing_any = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
no_implicit_reexport = true
strict_equality = true
ignore_missing_imports = true
# this

[tool.pycln]
all = true

[tool.isort]
profile = "black"
known_first_party = [
  "pyodide",
  "pyodide_js",
  "micropip",
  "pyodide_build",
  "_pyodide",
]
