[metadata]
name = pytest-pyodide
version = 0.21.0.dev0
author = Pyodide developers
description = "Pytest plugin for testing Pyodide and third-party applications that use Pyodide"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyodide/pytest-pyodide
project_urls =
    Bug Tracker = https://github.com/pyodide/pytest-pyodide/issues
    Documentation = https://pyodide.org/en/stable/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Framework :: Pytest

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    pexpect
    pytest
    pytest-asyncio
    hypothesis
    selenium
    tblib

# This is required to add node driver code to the package.
[options.package_data]
pytest_pyodide = *.js

# pytest will look up `pytest11` entrypoints to find plugins
# See: https://docs.pytest.org/en/7.1.x/how-to/writing_plugins.html#making-your-plugin-installable-by-others
[options.entry_points]
pytest11 =
    pytest_pyodide = pytest_pyodide.fixture
    pytest_pyodide_hook = pytest_pyodide.hook

[options.packages.find]
where = .

[tool:pytest]
asyncio_mode = strict
addopts =
    --tb=short
testpaths = tests
